--- a/apps/files_sharing/css/sharetabview.css
+++ b/apps/files_sharing/css/sharetabview.css
@@ -1,215 +1,218 @@
 .app-files .shareTabView {
-	min-height: 100px;
+  min-height: 100px;
 }
-
-.shareTabView .oneline { white-space: nowrap; }
-
+.shareTabView .oneline {
+  white-space: nowrap;
+}
 .shareTabView .shareWithLoading {
-	padding-left: 10px;
-	right: 30px;
-	top: 2px;
+  padding-left: 10px;
+  right: 30px;
+  top: 2px;
 }
-
 .shareTabView label {
-	white-space: nowrap;
+  white-space: nowrap;
 }
-
 .shareTabView input[type="checkbox"] {
-	margin: 0 3px 0 8px;
-	vertical-align: middle;
+  margin: 0 3px 0 8px;
+  vertical-align: middle;
 }
-
 .shareTabView input[type="text"],
 .shareTabView input[type="password"] {
-	width: 94%;
-	margin-left: 0;
+  width: 94%;
+  margin-left: 0;
 }
 .shareTabView input[type="text"].shareWithField,
 .shareTabView input[type="text"].emailField,
 .shareTabView input[type="text"].linkText {
-	width: 80%;
+  width: 80%;
 }
-
 .shareTabView form {
-	font-size: 100%;
-	margin-left: 0;
-	margin-right: 0;
+  font-size: 100%;
+  margin-left: 0;
+  margin-right: 0;
 }
-
 #shareWithList {
-	list-style-type: none;
-	padding: 0 0 16px;
+  list-style-type: none;
+  padding: 0 0 16px;
 }
-
 #shareWithList li {
-	padding-top: 5px;
-	padding-bottom: 5px;
-	font-weight: bold;
-	white-space: normal;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-weight: bold;
+  white-space: normal;
 }
-
-#shareWithList .unshare img, #shareWithList .showCruds img {
-	vertical-align:text-bottom; /* properly align icons */
+#shareWithList .unshare img,
+#shareWithList .showCruds img {
+  vertical-align: text-bottom;
+  /* properly align icons */
 }
-
-#shareWithList label input[type=checkbox]{
-	margin-left: 0;
-	position: relative;
+#shareWithList label input[type=checkbox] {
+  margin-left: 0;
+  position: relative;
 }
-#shareWithList .username{
-	padding-right: 8px;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	max-width: 254px;
-	display: inline-block;
-	overflow: hidden;
-	vertical-align: middle;
+#shareWithList .username {
+  padding-right: 8px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 254px;
+  display: inline-block;
+  overflow: hidden;
+  vertical-align: middle;
 }
-#shareWithList li label{
-	margin-right: 8px;
+#shareWithList li label {
+  margin-right: 8px;
 }
-
 .shareTabView .icon-loading-small {
-	display: inline-block;
-	z-index: 1;
-	background-color: white;
-	padding: 2px 0;
+  display: inline-block;
+  z-index: 1;
+  background-color: white;
+  padding: 2px 0;
 }
-
 .shareTabView .shareWithList .icon-loading-small,
 .shareTabView .linkShareView .icon-loading-small {
-	position: absolute;
+  position: absolute;
 }
-
 .shareTabView .linkPass .icon-loading-small {
-	margin-top: 9px;
+  margin-top: 9px;
 }
-
 .shareTabView .icon {
-	display: inline-block;
-	background-size: 16px 16px;
+  display: inline-block;
+  background-size: 16px 16px;
 }
-
 .subTabHeaders .tabHeaders {
-	margin-left: 0px;
-	margin-right: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
 }
-
-
 /* LINK SHARES */
 /* ----------- */
-
-.link-entry {
-	display: flex;
-	align-items: center;
-	min-height: 50px;
-}
-
 .link-shares {
-	margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
-	.link-entry:not(:last-child) {
-		border-bottom: 1px solid #eee;
-	}
-		.link-entry:before {
-			content: "";
-			height: 32px;
-			width: 32px;
-			background-color: rgb(180, 180, 180);
-			background-image: url('/core/img/actions/public-white.svg');
-			background-position: 8px 8px;
-			border-radius: 50%;
-			margin-right: 10px;
-		}
-
-		.link-entry--title {
-			flex-grow: 1;
-			font-weight: bold;
-		}
-
-		.link-entry--icon-button {
-			margin-left: 5px;
-			opacity: .333;
-			-webkit-transition: opacity .25s;
-			-moz-transition: opacity .25s;
-			-ms-transition: opacity .25s;
-			-o-transition: opacity .25s;
-			transition: opacity .25s;
-		}
-
-		.link-entry--icon-button:hover {
-			opacity: 1;
-		}
-
-			.link-entry--icon-button span {
-				cursor: pointer;
-			}
-
-/* USER & GROUP SHARES */
-/* ------------------- */
-
+.link-entry {
+  display: flex;
+  align-items: center;
+  min-height: 50px;
+}
+.link-entry:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.link-entry:before {
+  content: "";
+  height: 32px;
+  width: 32px;
+  background-color: #b4b4b4;
+  background-image: url('/core/img/actions/public-white.svg');
+  background-position: 8px 8px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.link-entry--title {
+  flex-grow: 1;
+  font-weight: bold;
+}
+.link-entry--icon-button {
+  margin-left: 5px;
+  opacity: .333;
+  -webkit-transition: opacity .25s;
+  -moz-transition: opacity .25s;
+  -ms-transition: opacity .25s;
+  -o-transition: opacity .25s;
+  transition: opacity .25s;
+}
+.link-entry--icon-button:hover {
+  opacity: 1;
+}
+.link-entry--icon-button span {
+  cursor: pointer;
+}
+/* -------------------------------------------------- USER & GROUP SHARES --- */
 .user-shares {
-	margin: 20px -15px;
+  margin: 20px -15px;
 }
+.user-share {
+  transition: all 0.25s ease;
+  padding: 0 15px;
+}
+.user-share .icon-settings-dark {
+  transition: all 0.25s ease;
+  opacity: .25;
+}
+.user-share.-active,
+.user-share:hover {
+  background-color: #eee;
+}
+.user-share.-active .icon-settings-dark,
+.user-share:hover .icon-settings-dark {
+  opacity: .25;
+}
+.user-share.-active .user-share--dropdown {
+  height: 30px;
+}
+.user-share:not(:last-child) {
+  border-bottom: 1px solid #eee;
+}
+.user-share .icon-settings-dark {
+  opacity: 0;
+}
+.user-share--user {
+  display: flex;
+  align-items: center;
+}
+.user-share--title {
+  font-weight: bold;
+  margin-right: 5px;
+}
+.user-share--main {
+  display: flex;
+  align-items: center;
+  min-height: 50px;
+  justify-content: space-between;
+}
+.user-share--checkbox:not(:first-child) {
+  margin-left: 5px;
+}
+.user-share--dropdown {
+  overflow: hidden;
+  height: 0;
+  transition: height 0.25s ease-in-out;
+  display: flex;
+  justify-content: space-between;
+}
+.user-share--permission-preview {
+  white-space: nowrap;
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+}
+.user-share--permission-preview li {
+  display: inline;
+  font-size: 12px;
+}
+.user-share--permission-preview li:first-child:before {
+  content: '(';
+}
+.user-share--permission-preview li:not(:last-child):after {
+  content: ',';
+}
+.user-share--permission-preview li:last-child:after {
+  content: ')';
+}
+.user-share--permission-list li {
+  display: inline;
+}
+.user-share--toggle-dropdown {
+  cursor: pointer;
+}
+/* ---------------------------------------------------- PUBLIC LINK MODAL --- */
 
-	.user-share{
-		transition: all .5s ease;
-		padding: 0 15px;
-	}
-
-	.user-share:hover {
-		background-color: #eee;
-	}
-
-	.user-share:not(:last-child) {
-		border-bottom: 1px solid #eee;
-	}
-
-	.user-share--title {
-		flex-grow: 1;
-		font-weight: bold;
-	}
-
-	.user-share--main {
-		display: flex;
-		align-items: center;
-		min-height: 50px;
-	}
-
-	.user-share--checkbox:not(:first-child) {
-		margin-left: 5px;
-	}
-
-	.user-share--dropdown {
-		overflow: hidden;
-		height: 0;
-		transition: height .25s ease-in-out;
-		display: flex;
-		justify-content: space-between;
-	}
-
-	.user-share:hover .user-share--dropdown {
-		height: 30px;
-	}
-
-	.user-share--permission-preview li {
-		display: inline;
-		font-size: 12px;
-	}
-
-	.user-share--permission-preview li:first-child:before {
-		content: '(';
-	}
-
-	.user-share--permission-preview li:not(:last-child):after {
-		content: ',';
-	}
-
-	.user-share--permission-preview li:last-child:after {
-		content: ')';
-	}
-
-	.user-share--permission-list li {
-		display: inline;
-	}
+.public-link-modal {
+  width: 340px;
+}
+.public-link-modal--item {
+  margin-bottom: 20px;
+}
+.public-link-modal--label,
+.public-link-modal--input {
+  display: block;
+  width: calc(100% - 15px) !important;
+}
