--- a/apps/files_sharing/css/sharetabview.css
+++ b/apps/files_sharing/css/sharetabview.css
@@ -96,12 +96,10 @@
 .link-entry:not(:last-child) {
   border-bottom: 1px solid #eee;
 }
-.link-entry:before {
-  content: "";
+.link-entry--icon {
   height: 32px;
   width: 32px;
   background-color: #b4b4b4;
-  background-image: url('/core/img/actions/public-white.svg');
   background-position: 8px 8px;
   border-radius: 50%;
   margin-right: 10px;
