--- a/apps/files_sharing/css/sharetabview.css
+++ b/apps/files_sharing/css/sharetabview.css
@@ -89,17 +89,28 @@
   margin-bottom: 20px;
 }
 .link-entry {
+  position: relative;
   display: flex;
   align-items: center;
   min-height: 50px;
 }
+.link-entry .socialShareContainer {
+  position: absolute;
+  right: 0;
+  top: -20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0 2px 2px 5px;
+  border-radius: 3px;
+}
 .link-entry:not(:last-child) {
   border-bottom: 1px solid #eee;
 }
-.link-entry--icon {
+.link-entry:before {
+  content: "";
   height: 32px;
   width: 32px;
   background-color: #b4b4b4;
+  background-image: url('/core/img/actions/public-white.svg');
   background-position: 8px 8px;
   border-radius: 50%;
   margin-right: 10px;
@@ -202,7 +213,6 @@
   cursor: pointer;
 }
 /* ---------------------------------------------------- PUBLIC LINK MODAL --- */
-
 .public-link-modal {
   width: 340px;
 }
@@ -213,4 +223,13 @@
 .public-link-modal--input {
   display: block;
   width: calc(100% - 15px) !important;
+}
+.minify {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  opacity: 0;
+}
+.minify input {
+  font-size: 1px;
 }
