--- a/apps/files_sharing/css/sharetabview.css
+++ b/apps/files_sharing/css/sharetabview.css
@@ -1,55 +1,67 @@
 .app-files .shareTabView {
   min-height: 100px;
 }
+
 .shareTabView .oneline {
   white-space: nowrap;
 }
+
 .shareTabView .shareWithLoading {
   padding-left: 10px;
   right: 30px;
   top: 2px;
 }
+
 .shareTabView label {
   white-space: nowrap;
 }
+
 .shareTabView input[type="checkbox"] {
   margin: 0 3px 0 8px;
   vertical-align: middle;
 }
+
 .shareTabView input[type="text"],
 .shareTabView input[type="password"] {
   width: 94%;
   margin-left: 0;
 }
+
 .shareTabView input[type="text"].shareWithField,
 .shareTabView input[type="text"].emailField,
 .shareTabView input[type="text"].linkText {
   width: 80%;
 }
+
 .shareTabView form {
   font-size: 100%;
   margin-left: 0;
   margin-right: 0;
 }
+
 #shareWithList {
   list-style-type: none;
   padding: 0 0 16px;
 }
+
 #shareWithList li {
   padding-top: 5px;
   padding-bottom: 5px;
   font-weight: bold;
   white-space: normal;
 }
+
 #shareWithList .unshare img,
 #shareWithList .showCruds img {
   vertical-align: text-bottom;
   /* properly align icons */
 }
+
 #shareWithList label input[type=checkbox] {
   margin-left: 0;
   position: relative;
 }
+
 #shareWithList .username {
   padding-right: 8px;
   white-space: nowrap;
@@ -59,43 +71,63 @@
   overflow: hidden;
   vertical-align: middle;
 }
+
 #shareWithList li label {
   margin-right: 8px;
 }
+
 .shareTabView .icon-loading-small {
   display: inline-block;
   z-index: 1;
   background-color: white;
   padding: 2px 0;
 }
+
 .shareTabView .shareWithList .icon-loading-small,
 .shareTabView .linkShareView .icon-loading-small {
   position: absolute;
 }
+
 .shareTabView .linkPass .icon-loading-small {
   margin-top: 9px;
 }
+
 .shareTabView .icon {
   display: inline-block;
   background-size: 16px 16px;
 }
+
 .subTabHeaders .tabHeaders {
   margin-left: 0px;
   margin-right: 0px;
 }
+
 /* LINK SHARES */
 /* ----------- */
 .link-shares {
   margin-bottom: 20px;
 }
+
 .link-entry {
   display: flex;
   align-items: center;
   min-height: 50px;
+  position: relative;
 }
+
 .link-entry:not(:last-child) {
   border-bottom: 1px solid #eee;
 }
+
+.link-entry .socialShareContainer {
+  position: absolute;
+  right: 0;
+  top: -20px;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 0 2px 2px 5px;
+  border-radius: 3px;
+}
+
 .link-entry--icon {
   height: 32px;
   width: 32px;
@@ -104,10 +136,12 @@
   border-radius: 50%;
   margin-right: 10px;
 }
+
 .link-entry--title {
   flex-grow: 1;
   font-weight: bold;
 }
+
 .link-entry--icon-button {
   margin-left: 5px;
   opacity: .333;
@@ -117,58 +151,73 @@
   -o-transition: opacity .25s;
   transition: opacity .25s;
 }
+
 .link-entry--icon-button:hover {
   opacity: 1;
 }
+
 .link-entry--icon-button span {
   cursor: pointer;
 }
+
 /* -------------------------------------------------- USER & GROUP SHARES --- */
 .user-shares {
   margin: 20px -15px;
 }
+
 .user-share {
   transition: all 0.25s ease;
   padding: 0 15px;
 }
+
 .user-share .icon-settings-dark {
   transition: all 0.25s ease;
   opacity: .25;
 }
+
 .user-share.-active,
 .user-share:hover {
   background-color: #eee;
 }
+
 .user-share.-active .icon-settings-dark,
 .user-share:hover .icon-settings-dark {
   opacity: .25;
 }
+
 .user-share.-active .user-share--dropdown {
   height: 30px;
 }
+
 .user-share:not(:last-child) {
   border-bottom: 1px solid #eee;
 }
+
 .user-share .icon-settings-dark {
   opacity: 0;
 }
+
 .user-share--user {
   display: flex;
   align-items: center;
 }
+
 .user-share--title {
   font-weight: bold;
   margin-right: 5px;
 }
+
 .user-share--main {
   display: flex;
   align-items: center;
   min-height: 50px;
   justify-content: space-between;
 }
+
 .user-share--checkbox:not(:first-child) {
   margin-left: 5px;
 }
+
 .user-share--dropdown {
   overflow: hidden;
   height: 0;
